Added take picture and pick picture buttons

--- a/web/app-source/www/templates/playlists.html
+++ b/web/app-source/www/templates/playlists.html
@@ -36,6 +36,14 @@
               <i class="icon ion-share"></i>
               Share
             </a>
+            <a class="tab-item" ng-click="takePicture()">
+              <i class="icon ion-thumbsup"></i>
+              Take Picture
+            </a>
+            <a class="tab-item" ng-click="pickPicture()">
+              <i class="icon ion-thumbsup"></i>
+              Pick Picture
+            </a>
           </div>
 
         </div>
