--- a/web/app-source/www/templates/playlists.html
+++ b/web/app-source/www/templates/playlists.html
@@ -10,7 +10,7 @@
 
           <div class="item item-avatar">
             <img src="http://lorempixel.com/200/200/people/" ng-click="qww">
-            <h2>{{playlist.title}}</h2>
+            <h2 ng-click="aaa">{{playlist.title}}</h2>
             <p ng-click="login()">{{playlist.title}}</p>
           </div>
 
@@ -21,12 +21,12 @@
             </p>
             <p>
               <a href="#" class="subdued">1 Like</a>
-              <a href="#" class="subdued">5 Comments</a>
+              <a href="#" class="subdued" ng-click="sksk">5 Comments</a>
             </p>
           </div>
 
           <div class="item tabs tabs-secondary tabs-icon-left">
-            <a class="tab-item" href="#">
+            <a class="tab-item" href="#" ng-click="alertPlaylistTitle(playlist)">
               <i class="icon ion-thumbsup"></i>
               Like
             </a>
