--- a/web/app-source/platforms/browser/www/templates/playlists.html
+++ b/web/app-source/platforms/browser/www/templates/playlists.html
@@ -1,30 +1,32 @@
-<ion-view view-title="Playlists">
+<ion-view>
+
+  <ion-nav-title>
+      Playlists
+  </ion-nav-title>
   <ion-content>
     <ion-list>
         
         <div class="list card" ng-repeat="playlist in playlists">
 
           <div class="item item-avatar">
-            <img src="http://lorempixel.com/200/200/people/">
-            <h2>{{playlist.title}}</h2>
-            <p>{{playlist.title}}</p>
+            <img src="http://lorempixel.com/200/200/people/" ng-click="qww">
+            <h2 ng-click="aaa">{{playlist.title}}</h2>
+            <p ng-click="login()">{{playlist.title}}</p>
           </div>
 
           <div class="item item-body">
             <img class="full-image" src="http://lorempixel.com/200/200/people/">
             <p>
-              This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-              the content is from a card-body consisting of an image and paragraph text. The footer
-              consists of tabs, icons aligned left, within the card-footer.
+              ola
             </p>
             <p>
               <a href="#" class="subdued">1 Like</a>
-              <a href="#" class="subdued">5 Comments</a>
+              <a href="#" class="subdued" ng-click="sksk">5 Comments</a>
             </p>
           </div>
 
           <div class="item tabs tabs-secondary tabs-icon-left">
-            <a class="tab-item" href="#">
+            <a class="tab-item" href="#" ng-click="alertPlaylistTitle(playlist)">
               <i class="icon ion-thumbsup"></i>
               Like
             </a>
