--- a/web/app-source/www/templates/playlists.html
+++ b/web/app-source/www/templates/playlists.html
@@ -15,7 +15,7 @@
           </div>
 
           <div class="item item-body">
-            <img class="full-image" src="http://lorempixel.com/200/200/people/">
+            <img class="full-image" ng-src="{{ playlist.image }}">
             <p>
               ola
             </p>
@@ -38,12 +38,12 @@
               <i class="icon ion-share"></i>
               Share
             </a>
-            <a class="tab-item" ng-click="takePicture()">
-              <i class="icon ion-thumbsup"></i>
+            <a class="tab-item" ng-click="null">
+              <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i>
               Take Picture
             </a>
             <a class="tab-item" ng-click="pickPicture()">
-              <i class="icon ion-thumbsup"></i>
+              <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i>
               Pick Picture
             </a>
           </div>
