--- a/web/app-source/www/templates/menu.html
+++ b/web/app-source/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-stable" ng-click="takePicture()">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -18,16 +18,16 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()">
+        <ion-item nav-clear="" menu-close="" ng-click="login()">
           Banana
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
+        <ion-item nav-clear="" menu-close="" href="#/app/search">
           Search
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
+        <ion-item nav-clear="" menu-close="" href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
+        <ion-item nav-clear="" menu-close="" href="#/app/playlists">
           Playlists
         </ion-item>
       </ion-list>
