--- a/web/app-source/www/templates/playlists.html
+++ b/web/app-source/www/templates/playlists.html
@@ -1,54 +1,49 @@
 <ion-view>
 
-  <ion-nav-title>
-      Playlists
-  </ion-nav-title>
-  <ion-content>
-    <ion-list fab-data="playlists" fab-data-src="http://localhost:3103/playlists2">
-        
-        <div class="list card" ng-repeat="playlist in playlists">
+    <ion-nav-title ng-click="login()">
+        Playlists
+    </ion-nav-title>
+    <ion-content>
+        <ion-list fab-data="playlists" fab-data-src="http://localhost:3104/playlists1">
 
-          <div class="item item-avatar">
-            <img ng-src="{{ playlist.image }}" ng-click="takePicture(playlist)">
-            <h2 ng-click="login()">{{playlist.title}}</h2>
-            <p ng-click="login()">{{playlist.title}}</p>
-          </div>
+            <div class="list card" ng-repeat="playlist in playlists">
 
-          <div class="item item-body">
-            <img class="full-image" ng-src="{{ playlist.image }}" ng-click="takePicture(playlist)">
-            <p>
-              ola
-            </p>
-            <p>
-              <a href="#" class="subdued">1 Like</a>
-              <a href="#" class="subdued" ng-click="takePicture(playlist)">5 Comments</a>
-            </p>
-          </div>
+                <div class="item item-avatar">
+                    <img ng-src="{{ playlist.image }}">
+                    <h2 ng-click="login()">{{playlist.title}}</h2>
+                    <p ng-click="login()">{{playlist.title}}</p>
+                </div>
 
-          <div class="item tabs tabs-secondary tabs-icon-left">
-            <a class="tab-item" href="#" ng-click="alertPlaylistTitle(playlist)">
-              <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i>
-              Like
-            </a>
-            <a class="tab-item" href="#" ng-click="takePicture(playlist)">
-              <i class="icon ion-chatbox"></i>
-              Comment
-            </a>
-            <a class="tab-item" href="#">
-              <i class="icon ion-share"></i>
-              Share
-            </a>
-            <a class="tab-item" ng-click="null">
-              <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i>
-              Take Picture
-            </a>
-            <a class="tab-item" ng-click="pickPicture()">
-              <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i>
-              Pick Picture
-            </a>
-          </div>
+                <div class="item item-body">
+                    <img class="full-image" ng-src="{{ playlist.image }}" ng-click="takePicture(playlist)">
+                    <p>
+                        ola
+                    </p>
+                    <p>
+                        <a href="#" class="subdued">1 Like</a>
+                        <a href="#" class="subdued" ng-click="takePicture(playlist)">5 Comments</a>
+                    </p>
+                </div>
 
-        </div>
-    </ion-list>
-  </ion-content>
+                <div class="item tabs tabs-secondary tabs-icon-left">
+                    <a class="tab-item" href="#" ng-click="alertPlaylistTitle(playlist)">
+                        <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i> Like
+                    </a>
+                    <a class="tab-item" href="#" ng-click="takePicture(playlist)">
+                        <i class="icon ion-chatbox"></i> Comment
+                    </a>
+                    <a class="tab-item" href="#">
+                        <i class="icon ion-share"></i> Share
+                    </a>
+                    <a class="tab-item" ng-click="null">
+                        <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i> Take Picture
+                    </a>
+                    <a class="tab-item" ng-click="pickPicture()">
+                        <i class="icon ion-thumbsup" ng-click="takePicture(playlist)"></i> Pick Picture
+                    </a>
+                </div>
+
+            </div>
+        </ion-list>
+    </ion-content>
 </ion-view>
