--- a/web/app-source/www/templates/search.html
+++ b/web/app-source/www/templates/search.html
@@ -1,5 +1,16 @@
 <ion-view view-title="Search">
-  <ion-content>
-    <h1>Search</h1>
-  </ion-content>
+    <ion-content>
+        <div>
+            Search teste-before
+            <div id="teste">
+                <div style="background-color: red;"> oooooi </div>tchau
+            </div>
+            texto-teste
+            <div style="background-color: yellow;">hhhhh</div>
+            <div>falal lujjjj</div>
+            oooqoweq
+            <div style="background-color: green;">verde</div>
+            <div style="background-color: gray;">cinza</div>
+        </div>
+    </ion-content>
 </ion-view>
