--- a/web/app-source/www/templates/menu.html
+++ b/web/app-source/www/templates/menu.html
@@ -22,7 +22,7 @@
           jj
         </ion-item>
         <ion-item nav-clear="" menu-close="" href="#/app/search">
-          Search
+          Sehrch
         </ion-item>
         <ion-item nav-clear="" menu-close="" href="#/app/browse">
           Browse
