--- a/web/app-source/www/templates/search.html
+++ b/web/app-source/www/templates/search.html
@@ -6,9 +6,9 @@
                 <div style="background-color: red;"> oooooi </div>tchau
             </div>
             texto-teste
-            <div style="background-color: yellow;">hhhhh</div>
+            <div id="teste" style="background-color: yellow;" ng-click="falar('ahjsdhajsdh')">hhhhh</div>
             <div>falal lujjjj</div>
-            ooweq
+            <h1 ng-click="fazerAlgo('alguma coisa')">Ola</h1>
             <div style="background-color: green;">verde</div>
             <div style="background-color: gray;">cinza</div>
         </div>
