--- a/web/app-source/www/templates/browse.html
+++ b/web/app-source/www/templates/browse.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Browse">
-  <ion-content>
-    <h1>Tde</h1>
-  </ion-content>
+    <ion-content>
+        <h1>de<button ng-click="login()">oi</button></h1>
+    </ion-content>
 </ion-view>
