--- a/web/app-source/www/templates/menu.html
+++ b/web/app-source/www/templates/menu.html
@@ -27,7 +27,7 @@
         <ion-item nav-clear="" menu-close="" href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item nav-clear="" menu-close="" href="#/app/playlists">
+        <ion-item href="#/app/playlists">
           Playlists
         </ion-item>
       </ion-list>
